gobmkida/c1/owl_find_lunches
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_find_lunches/src/engine/owl.c:4639:12: error: expected expression
*( _OWORD *)&owl->lunch[4] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_find_lunches/src/engine/owl.c:4639:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&owl->lunch[4] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_find_lunches/src/engine/owl.c:4640:12: error: expected expression
*( _OWORD *)owl->lunch = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_find_lunches/src/engine/owl.c:4640:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)owl->lunch = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_find_lunches/src/engine/owl.c:4824:28: error: use of undeclared identifier 'stones_on_board_stone_count_for_position'
v35 = *( int *)( ( char *)&stones_on_board_stone_count_for_position + v33); 
                           ^
5 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_find_lunches/src/obj/1/owl.o] Error 1
